--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
           <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
             <div class="box featured" data-aos="zoom-in" data-aos-delay="400">
               <h3>HIGHT</h3>
-              <h4>100.000<span> / month</span></h4>
+              <h4>100.000<span> / Bulan</span></h4>
               <ul>
                 <li>16GB RAM</li>
                 <li>6CORE CPU</li>
