--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
               <div class="social-links mt-3">
                 <a href="https://github.com/gitfdil1248/" class="github"><i class="bx bxl-github"></i></a>
                 <a href="https://t.me/fadhostoffc/" class="telegram"><i class="bx bxl-telegram"></i></a>
-                <a href="https://instagram.com/m.pdilll_/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="https://instagram.com/m.pdilll_" class="instagram"><i class="bx bxl-instagram"></i></a>
               </div>
             </div>
           </div>
@@ -649,7 +649,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/bootslander-free-bootstrap-landing-page-template/ -->
-        Designed by <a href="https://instagram.com/m.pdilll_/">fadhost</a>
+        Designed by <a href="https://instagram.com/m.pdilll_">fadhost</a>
       </div>
     </div>
   </footer><!-- End Footer -->
