--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <h1><span>FADHOST OFFC</span> Ready Kebutuhan Hosting Vps, Rdp, Domain </h1>
             <h2>Kami Siap Melayani Anda 24 Jam Untuk Kebutuhan Anda</h2>
             <div class="text-center text-lg-start">
-              <a href="#about" class="btn-get-started scrollto">Lanjutkan</a>
+              <a href="#pricing" class="btn-get-started scrollto">Lanjutkan</a>
             </div>
           </div>
         </div>
