--- a/index.html
+++ b/index.html
@@ -133,19 +133,19 @@
             <p>2. (Domain) adalah nama unik yang diberikan untuk mengidentifikasi nama server komputer seperti web server atau email server di jaringan komputer ataupun internet. Nama domain berfungsi untuk mempermudah pengguna di internet pada saat melakukan akses ke server.</p>
             <p>3. (RDP) Remote Desktop Protocol adalah protokol komunikasi jaringan aman yang dikembangkan oleh Microsoft.</p>
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
-              <div class="icon"><i class="bx bx-cpu"></i></div>
+              <div class="icon"><i class="bi bi-cpu"></i></div>
               <h4 class="title"><a href="">VPS</a></h4>
               <p class="description">Server privat virtual (
 Server pribadi virtual)</p>
             </div>
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
-              <div class="icon"><i class="bx bx-globe2"></i></div>
+              <div class="icon"><i class="bi bi-globe2"></i></div>
               <h4 class="title"><a href="">DOMAIN</a></h4>
               <p class="description">Nama situs web yang juga adalah alamat di mana pengguna internet dapat mengakses situs web Anda.</p>
             </div>
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
-              <div class="icon"><i class="bx bx-pc-display"></i></div>
+              <div class="icon"><i class="bi bi-pc-display"></i></div>
               <h4 class="title"><a href="">RDP</a></h4>
               <p class="description">Remote Desktop Protocol</p>
             </div>
